[package]
name = "deno_npm"
version = "0.26.0"
edition = "2021"
description = "npm registry client and dependency resolver used in the Deno CLI"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_npm"
documentation = "https://docs.rs/deno_npm"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
async-trait = "0.1.68"
deno_semver = "0.6.0"
deno_error = "0.5.2"
deno_lockfile = "0.23.2"
monch = "0.5.0"
log = "0.4"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
thiserror = "2.0.3"
futures = "0.3.28"
url = "2"
capacity_builder = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.27.0", features = ["full"] }

[patch.crates-io]
# deno_lockfile = { git = "https://github.com/dsherret/deno_lockfile.git", branch = "deno_semver_0_7" }
# deno_semver = { git = "https://github.com/dsherret/deno_semver.git", branch = "perf_stack_strings" }
deno_lockfile = { path = "../deno_lockfile" }
deno_semver = { path = "../deno_semver" }
